--- a/src/styles/_styles_ovw.scss
+++ b/src/styles/_styles_ovw.scss
@@ -23,7 +23,7 @@
     background-color: darken($bg-dark, 5%) ;
     color: $fg-color !important;
     body {
-        background: $bg-darker;
+        background: #ffffff;
         color: $fg-color;
     }
     .card {
